jenkins-openshift-monitoring/openshift/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector: {app: prometheus}
  ports:
    - {name: http, port: 9090, targetPort: http}
